# sphinx-github-changelog

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  MANIFEST.in  README.md  README.rst  data.json  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  release-drafter.yml  renovate.json5  sync-pre-commit.py
.github/workflows/: autofix.yml  ci.yml  coverage-comment.yml  publish.yml
docs/: conf.py  index.rst  requirements.txt
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_fa4e79a83dadc5c7___init___py.html  z_fa4e79a83dadc5c7_changelog_py.html  z_fa4e79a83dadc5c7_config_py.html  z_fa4e79a83dadc5c7_credentials_py.html  z_fa4e79a83dadc5c7_exceptions_py.html  z_fa4e79a83dadc5c7_github_releases_py.html  z_fa4e79a83dadc5c7_setup_py.html  z_fa4e79a83dadc5c7_urls_py.html
scripts/: README.md  docs  docs-spelling  lint  publish  tests
sphinx_github_changelog/: __init__.py  changelog.py  config.py  credentials.py  exceptions.py  github_releases.py  html_processing.py  markdown_processing.py  metadata.py  setup.py  urls.py
tests/: conftest.py
tests/acceptance/: changelog.html  test_all.py
tests/acceptance/cassettes/test_all/: test_build.yaml  test_build_404.yaml
tests/roots/test-404/: conf.py  index.rst
tests/roots/test-all/: conf.py  index.rst
tests/roots/test-error/: index.rst
tests/unit/: test_changelog.py  test_config.py  test_git.py  test_github_releases.py  test_html_processing.py  test_markdown_processing.py  test_urls.py
