[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"

[project]
name = "sphinx-github-changelog"
dynamic = ["version"]
description = "Build a sphinx changelog from GitHub Releases"
authors = [{ name = "Joachim Jablon", email = "ewjoachim@gmail.com" }]
requires-python = ">=3.11"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["sphinx", "github", "releases", "changelog"]
classifiers = [
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["docutils", "myst-parser>=5.1.0", "httpx", "Sphinx"]

[project.urls]
Homepage = "https://sphinx-github-changelog.readthedocs.io/en/latest/"
Repository = "https://github.com/ewjoachim/sphinx-github-changelog"
Documentation = "https://sphinx-github-changelog.readthedocs.io/en/latest/"

[dependency-groups]
dev = [
    # # Remove doc8 while they force old docutils.
    # "doc8",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-httpx",
    "basedpyright",
    "pytest-subprocess>=1.6.0",
]
docs = ["sphinx-rtd-theme"]
types = ["types-requests", "types-docutils"]

[tool.uv]
default-groups = ["dev", "docs"]
exclude-newer = "5 days"
# TODO: remove after 2026-05-21
exclude-newer-package = { myst-parser = false, mdit-py-plugins = false }

[tool.basedpyright]
exclude = ["tests", ".venv", "scripts", ".github"]
typeCheckingMode = "standard"

[tool.ruff]
target-version = "py39"
extend-exclude = [".venv"]

[tool.ruff.lint]
extend-select = [
    "UP",  # pyupgrade
    "I",   # isort
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "RUF", # ruff
]
fixable = ["ALL"]
extend-ignore = [
    "E501", # line too long
    # It's not exactly false but it's not supported enough by our dependencies,
    # so ruff is fighting with Pyright on this.
    "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.doc8]
max-line-length = 88
ignore-path = "docs/_build,.venv"

[tool.pytest.ini_options]
addopts = [
    "-vv",
    "--strict-markers",
    "-rfE",
    "-m not benchmark",
    "--cov=sphinx_github_changelog",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-branch",
]
testpaths = ["tests/unit", "tests/acceptance"]
filterwarnings = '''
    error
    ignore:nodes.Node.traverse\(\) is obsoleted by Node.findall\(\):PendingDeprecationWarning
'''
pythonpath = ["."]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "coverage: exclude",
    "if TYPE_CHECKING:",
    "[ ]+\\.\\.\\.$",
]
