[metadata]
name = sphinx-github-changelog
description = Build a sphinx changelog from GitHub Releases
author = Joachim Jablon
author_email = joachim.jablon@people-doc.com
url = https://github.com/peopledoc/sphinx-github-changelog
project_urls =
    GitHub = https://github.com/peopledoc/sphinx-github-changelog
    Documentation = https://sphinx-github-changelog.readthedocs.io
    Changelog = https://sphinx-github-changelog.readthedocs.io/en/stable/changelog.html
    Issue tracker = https://github.com/peopledoc/sphinx-github-changelog/issues
long_description = file: README.rst
keywords = sphinx, github, changelog
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: Sphinx :: Extension
    License :: OSI Approved :: MIT License

[options]
zip_safe = True
include_package_data = True
packages = find:
setup_requires =
  setuptools_scm
install_requires =
    sphinx
    requests
    docutils
    # Backport from Python 3.8
    importlib-metadata

[options.extras_require]
dev =
    tox
    black
    isort

test =
    pytest
    pytest-mock
    pytest-cov
    requests-mock

lint =
    black
    flake8
    isort
    mypy
    check-manifest

docs =
    doc8
    sphinx>=3.1.1
    sphinx-github-changelog
    sphinx_rtd_theme

docs_spelling =
    sphinxcontrib-spelling

[options.packages.find]
include =
    sphinx_github_changelog
    sphinx_github_changelog.*

[options.entry_points]
console_scripts =
    sphinx-github-changelog = sphinx_github_changelog.cli:main

[isort]
profile = black
known_first_party = sphinx_github_changelog

[flake8]
# This section ensures black and flake8 play nice together
max-line-length = 88
# E203: whitespace before colon on list slice: mylist[1 : 2]
extend-ignore = E203

[doc8]
max-line-length=88
ignore-path=docs/_build

[tool:pytest]
addopts =
    --cov-report term-missing --cov-branch --cov-report html --cov-report term
    --cov=sphinx_github_changelog -vv --strict-markers -rfE
testpaths =
    tests/unit
    tests/acceptance
markers =
    sphinx

[mypy]
no_implicit_optional = True

# Add deps that mypy don't recognize here.
[mypy-importlib_metadata.*]
ignore_missing_imports = True

[coverage:report]
exclude_lines =
    raise NotImplementedError
    coverage: exclude
    if TYPE_CHECKING:
    [ ]+\.\.\.$
